# bitcoin_keygen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
output/: README.md  example_seed_phrase_printable.txt  example_seed_words_for_coldcard.txt  example_seed_words_simple.txt
src/: main.rs
src/bitcoin_keygen/: main.rs.html
