[package]
name = "bitcoin-keygen"
version = "0.1.0"
edition = "2021"
authors = ["nuniesmith"]
description = "Simple Bitcoin hardware wallet key generator for air-gapped systems with printable output for metal plate storage"
documentation = "https://nuniesmith.github.io/personal_bitcoin/"
repository = "https://github.com/nuniesmith/personal_bitcoin"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bitcoin = "0.32.5"
bip39 = "2.0.0"
rand = "0.9.0"
getrandom = "0.3.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
